# stokinaja-api

./: .env  .rustfmt.toml  Cargo.toml
migrations/2022-03-18-042925_create_sellers/: up.sql
migrations/2022-03-19-032050_create_company/: up.sql
migrations/2022-03-19-054332_create_supplier/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs  structs.rs  traits.rs
src/app/: mod.rs  seller.rs
src/app/company/: controller.rs  model.rs  service.rs
src/app/seller/: controller.rs  model.rs  service.rs
src/app/supplier/: controller.rs  model.rs  service.rs
