[package]
name = "stokinaja-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
async-trait = "0.1.52"
bcrypt = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.4", features = ["mysql","chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "8.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"